# server.go
@@ -27,8 +27,8 @@ func main() {
 	e.Get("/buildings/", controllers.UnimplementedResponse)
 	e.Get("/buildings/:building", controllers.UnimplementedResponse)
 	e.Get("/buildings/:building/", controllers.UnimplementedResponse)
-	e.Get("/buildings/:building/room", controllers.UnimplementedResponse)
-	e.Get("/buildings/:building/room/", controllers.UnimplementedResponse)
+	e.Get("/buildings/:building/rooms", controllers.UnimplementedResponse)
+	e.Get("/buildings/:building/rooms/", controllers.UnimplementedResponse)
 	e.Get("/buildings/:building/rooms/:room", controllers.GetRoomByNameAndBuilding)
 	e.Get("/buildings/:building/rooms/:room/", controllers.GetRoomByNameAndBuilding)
 	e.Get("/buildings/:building/rooms/:room/signals", controllers.UnimplementedResponse)
